03-app-deploy-ingress/02-DVWA-ingress-waf.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dvwa-https-waf
  namespace: dvwa-app
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Force redirect HTTPS
    nginx.ingress.kubernetes.io/rewrite-target: / 
    nginx.ingress.kubernetes.io/lua-resty-waf: "active" # Turn on WAF
    nginx.ingress.kubernetes.io/lua-resty-waf-score-threshold: "10"    
spec:
  tls:
  - hosts: # Replace your domains in here
    - ducltm-azurebootcamp.southeastasia.cloudapp.azure.com    
    secretName: tls-secret
  rules:
  - host: ducltm-azurebootcamp.southeastasia.cloudapp.azure.com # Replace your domain in here
    http:
      paths:
      - path: /
        backend:          
          serviceName: dvwa-app # Replace your service name
          servicePort: 80 # Replace your service port
